cmake_minimum_required(VERSION 2.8)

project(apoapsis-build-tools)

if(NOT MSVC)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --std=c99")
endif()

option(USE_OIIO "Use OpenImageIO to read and write images.")
if(USE_OIIO)
    set(OIIO_INCLUDE_DIR NOTFOUND CACHE PATH "")
    set(OIIO_LIBRARY NOTFOUND CACHE PATH "")
    if(NOT OIIO_INCLUDE_DIR OR NOT OIIO_LIBRARY)
        message(FATAL_ERROR "OpenImageIO dependencies are not configured yet.")
    endif()
    include_directories(${OIIO_INCLUDE_DIR})
    add_library(image STATIC image.c image-oiio.cpp)
    target_link_libraries(image ${OIIO_LIBRARY})
else()
    find_package(PNG REQUIRED)
    include_directories(${PNG_INCLUDE_DIRS})
    add_library(image STATIC image.c image-png.c)
    target_link_libraries(image ${PNG_LIBRARIES})
endif()

add_executable(gen-normalmap gen-normalmap.c normalmap.c)
target_link_libraries(gen-normalmap image)

add_executable(gen-distancefield gen-distancefield.c third-party/edtaa3/edtaa3.c)
target_link_libraries(gen-distancefield image)

if(UNIX)
    target_link_libraries(gen-normalmap -lm)
    target_link_libraries(gen-distancefield -lm)
endif()
